<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz1">

    <TextView
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="573dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time_second"
        android:textAlignment="gravity"
        android:textColor="#F1DC1F"
        android:textSize="15sp" />

    <TextView
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="635dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/quiz_score"
        android:textAlignment="gravity"
        android:textColor="#CD7F0C" />

    <TextView
        android:id="@+id/time_count"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="296dp"
        android:layout_marginRight="296dp"
        android:layout_marginBottom="577dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time"
        android:textAlignment="gravity"
        android:textColor="#102078"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/score_count"
        android:layout_width="66dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="318dp"
        android:layout_marginLeft="318dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="578dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/score"
        android:textAlignment="gravity"
        android:textColor="#D6A71A"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="111dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/result"
        android:textAlignment="gravity"
        android:textColor="#91251D" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="564dp"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="418dp"
        android:gravity="center"
        android:text="@string/a"
        android:textAlignment="gravity"
        app:backgroundTint="#1232E4"

        />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="223dp"
        android:layout_marginLeft="223dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="423dp"
        android:gravity="center"
        android:text="@string/b"
        android:textAlignment="gravity"
        app:backgroundTint="#1ED525" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:layout_marginBottom="271dp"
        android:gravity="center"
        android:text="@string/c"
        android:textAlignment="gravity"
        app:backgroundTint="#EF105C" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="221dp"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="270dp"
        android:gravity="center"
        android:text="@string/d"
        android:textAlignment="gravity"
        app:backgroundTint="#1031E8" />

    <Button
        android:id="@+id/again"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/again"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        app:backgroundTint="#84808A" />

</RelativeLayout>